--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/thogakade?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/thogakadeSpring?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.show-sql=true
